// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Checkbox /> renders correctly 1`] = `
<div
  className="input boolean"
>
  <input
    type="checkbox"
  />
</div>
`;

exports[`<FieldsGroup /> renders correctly 1`] = `
<div
  className="fields-group"
/>
`;

exports[`<FileChooser /> renders correctly 1`] = `
<div
  className="input"
>
  <input
    accept={
      Array [
        "image/jpeg",
        "image/png",
        "image/gif",
        "image/webp",
      ]
    }
    type="file"
  />
</div>
`;

exports[`<InputContainer /> renders correctly 1`] = `
<div
  className="input"
/>
`;

exports[`<RadioGroup /> renders correctly 1`] = `
<div
  className="input with_floating_label radio_buttons"
>
  <div
    className="label_input"
  >
    <label />
    <ul />
  </div>
</div>
`;

exports[`<SelectDropdown /> renders correctly 1`] = `
<select
  className="pl-3 pr-10 py-2 text-base border-gray-300 focus:outline-none focus:ring-indigo-500 focus:border-indigo-500 sm:text-sm rounded-md"
>
  <option
    value="one"
  >
    One
  </option>
  <option
    value="two"
  >
    Two
  </option>
  <option
    value="three"
  >
    Three
  </option>
</select>
`;

exports[`<SimpleForm /> renders correctly 1`] = `
<form
  acceptCharset="UTF-8"
  className="simple_form"
  method="post"
  onSubmit={[Function]}
/>
`;

exports[`<SimpleInput /> renders correctly 1`] = `
<div
  className="input"
>
  <input />
</div>
`;

exports[`<TextInput /> renders correctly 1`] = `
<div
  className="input"
>
  <input
    type="text"
  />
</div>
`;
